menupage css and html file edited.

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -16,94 +16,10 @@
 
   </header>
  <div class="name-container text-light ">
+    <br><br>
    <h2 class="page-heading text-center "> Products</h2>
    <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu-page.html"class="decoration text-white"> Products</a> </h6>
-   <marquee direction="right" behaviour="slide" scrolldelay="50">
-   <div class="d-flex flex-row mb-3" >
-      <div >
-         <div class="m-3 mx-4">
-            <div>
-                <img src="./../imgs/menu-card/baber-cat.webp" class="category-img" alt="">
-            </div>
-            <div class="m-3 mx-4">
-                Baber 
-            </div>
-         </div>
-      </div>
-      <div  class="m-3 mx-4" >
-        <div>
-            <img src="./../imgs/menu-card/cosmetic-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Cosmetic 
-        </div>
-      </div>
-      <div class="m-3 mx-4" >
-        <div>
-            <img src="./../imgs/menu-card/electronics-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Electronics
-        </div>
-      </div>
-      <div  class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/fashion-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Fashion 
-        </div>
-      </div>
-      <div class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/food-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Food  
-        </div>
-      </div>
-      <div class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/furniture-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Furniture 
-        </div>
-      </div>
-      <div class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/jewerly-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Jewerly
-        </div>
-      </div>
-      <div class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/kid-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Kid
-        </div>
-      </div>
-      <div class="m-3 mx-4" >
-        <div>
-            <img src="./../imgs/menu-card/life-style-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Life Style 
-        </div>
-      </div>
-      <div class="m-3 mx-4">
-        <div>
-            <img src="./../imgs/menu-card/medical-cat.webp" class="category-img" alt="">
-        </div>
-        <div class="m-3 mx-4">
-            Medical 
-        </div>
-      </div>
-   </div>
-</marquee>
+   <br><br><br><br><br><br>
  </div>
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
@@ -130,7 +46,7 @@
               <div class="effect-hover">
                   <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                   <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Cereal And Milk <br>
@@ -145,7 +61,7 @@
               <div class="effect-hover">
                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                   <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <button type="button" id="wishlist" onClick="whishlist()"><img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt=""></button>
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Choco Cherry
@@ -161,7 +77,7 @@
               <div class="effect-hover">
                   <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px">
                   <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Chokobar
@@ -177,7 +93,7 @@
               <div class="effect-hover">
                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                   <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   chocolate Wafer
@@ -194,7 +110,7 @@
               <div class="effect-hover">
                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                   <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Cookie
@@ -209,7 +125,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cookies Cream
@@ -225,7 +141,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cookies Dough
@@ -241,7 +157,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cream MilkShake
@@ -256,8 +172,7 @@
             </div>
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/search.png" height="20px" alt=""><img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt=""><button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
             </div>
             <div class="flavour-description">
                 Creamy Cake
@@ -273,7 +188,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Ice Cream Cakes
@@ -289,7 +204,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Lemon Ice Cream
@@ -305,7 +220,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Pretzel Cone
@@ -321,7 +236,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Toasted Strawberry
@@ -337,7 +252,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Vanilla
@@ -352,7 +267,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Wafer Ice Cream
@@ -368,7 +283,7 @@
             <div class="effect-hover">
                <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
                 <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Waffle Cones
