--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -103,7 +103,76 @@
         </div>
     </center>
 <br><br>
+<!DOCTYPE html>
+<html lang="en">
 
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>footer</title>
+    <link rel="stylesheet" href="./../css/footer.css">
+</head>
+
+
+    <footer class="main" >
+
+        <div class="foot">Quick Links
+            <div class="footer"><i class="fa-solid fa-house"></i>&nbsp;&nbsp;<a  href="./../index.html"
+                    class="a">Home</a>
+            </div>
+            <div class="footer "><i class="fa-solid fa-clock"></i>&nbsp;&nbsp;<a href="./events.html"
+                    class="a">Historical Events
+                </a></div>
+            <div class="footer "><i class="fa-brands fa-fort-awesome"></i>&nbsp;&nbsp;<a href="./forts.html"
+                    class="a">Forts</a></div>
+            <div class="footer "><i class="fa-solid fa-book"></i>&nbsp;&nbsp;&nbsp;<a href="./books.html"
+                    class="a">Books</a></div>
+            <div class="footer "><i class="fa-solid fa-cart-shopping"></i>&nbsp;&nbsp;<a href="./store.html"
+                    class="a">Store</a></div>
+            <div class="footer "><i class="fa-solid fa-image"></i>&nbsp;&nbsp;<a href="./gallery.html"
+                    class="a">Gallery</a></div>
+            <div class="footer "><i class="fa-solid fa-user"></i>&nbsp;&nbsp;<a href="./aboutus.html" class="a">About
+                    Us</a></div>
+
+
+        </div>
+
+
+        <div class="contact">Contact Us
+            <div class="footer"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;<a href="tel:8805803087"
+                    class="a">+91 8805803087</a></div>
+            <div class="footer "><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;<a
+                    href="mailto: suraj@roadtocode.org" class="a"> suraj@roadtocode.org</a></div>
+
+            <div class="footer ">&nbsp;&nbsp;<a href="https://www.instagram.com/roadtocode4u" class="a"
+                    target="_blank"><i class="fa-brands fa-instagram"></i></a>&emsp;<a
+                    href="https://www.linkedin.com/company/roadtocode4u/" class="a" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>&emsp;<a href="https://wa.me/8805803087" class="a"
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                &emsp;<a href="https://github.com/roadtocode4u" class="a" target="_blank"><i
+                        class="fa-brands fa-github"></i></a></div>
+            <br>
+
+        </div>
+        <div class="location">Location
+            <div class="footer"><i class="fa-solid fa-location-dot"></i></i>&nbsp;&nbsp;<a
+                    href="https://maps.app.goo.gl/Rmh5xuF63HXWgcGK7"
+                    class="a">404, Laxmi Heights, Above Lotus Multi<br>speciality Hospital Manjari BK, pune - 412307
+                </a></div>
+            <div class="footer "><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1116.529728101981!2d73.9694876332356!3d18.49654137850211!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e1!3m2!1sen!2sin!4v1706899658473!5m2!1sen!2sin"
+                    width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+
+    </footer>
+    <center style="background-color: rgb(29, 28, 28); margin:0; padding:0%; color:white " >Copyright &copy 2024 All Rights Reserved by RTC.</div></center>
+
+   
+    <script src="https://kit.fontawesome.com/0dcf08ad5b.js" crossorigin="anonymous"></script>
+
+</html>
                 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
