--- a/Pages/login-page.html
+++ b/Pages/login-page.html
@@ -21,7 +21,7 @@
         </form>
 
         <div>
-            <button class="account my-3"> Don't Have an account &nbsp;<a href="./registration.html" class="Register" > Register Now </a></button>
+            <button class="account my-3"> Don't Have an account &nbsp;<a href="./../Pages/registration.html" class="Register" > Register Now </a></button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
