--- a/Pages/registration.html
+++ b/Pages/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/login.css"/>
+    <link rel="stylesheet" href="./../css/login-page.css"/>
 </head>
 
 <body class="font">
@@ -32,7 +32,7 @@
               <p>By creating an account you agree to our <a href="#" style="color: #e83e8c;">Terms & Privacy</a>.</p>
               <button type="submit" class="register-btn">Register</button>
             <div> 
-                <button class="account my-3"> Already have an account? &nbsp; <a href="" style="color: #e83e8c;" > log-In</a></button>
+                <button class="account my-3"> Already have an account? &nbsp; <a href="./../Pages/login-page.html" style="color: #e83e8c;" > log-In</a></button>
             </div>
           </form>
     </div>
