wishlist ,add to cart and search change

--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -15,14 +15,15 @@
     <br>
 
   </header>
- <div class="name-container text-light ">
+ <div class="name-container text-light text-center ">
     <br><br>
    <h2 class="page-heading text-center "> Products</h2>
    <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu-page.html"class="decoration text-white"> Products</a> </h6>
    <br><br><br><br><br><br>
  </div>
+ <div class="flavour-container" id="flavour">
   <div class="filter-container">
-    <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
+    <img src="./../icons/menupage-icons/filter.png" height="20px" class="hover-image" alt="">Filter
   </div>
   <p class="category-heading">Available Desserts</p>
   <div>
@@ -37,16 +38,16 @@
    
       
      </div>
-     <div class="flavour-container" id="flavour">
+     
       <div class="row  ">
           <div class=" flavour-card col col-md-2 col-lg-3">
               <div>
                  <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
               </div>
               <div class="effect-hover">
-                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                  <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+                  <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                  <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image"  alt="">
               </div>
               <div class="flavour-description">
                   Cereal And Milk <br>
@@ -59,9 +60,9 @@
                   <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
               </div>
               <div class="effect-hover">
-                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                  <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                  <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Choco Cherry
@@ -75,9 +76,9 @@
                   <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" alt="">
               </div>
               <div class="effect-hover">
-                  <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px">
-                  <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+                  <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px" class="hover-image">
+                  <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Chokobar
@@ -91,9 +92,9 @@
                   <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" alt="">
               </div>
               <div class="effect-hover">
-                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                  <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                  <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   chocolate Wafer
@@ -108,9 +109,9 @@
                   <img src="./../imgs/menu-card/Cookie.jpg" class="flavour-img" alt="">
               </div>
               <div class="effect-hover">
-                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                  <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                  <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                  <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
               </div>
               <div class="flavour-description">
                   Cookie
@@ -123,9 +124,9 @@
                 <img src="./../imgs/menu-card/Cookies-Cream.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cookies Cream
@@ -139,9 +140,9 @@
                 <img src="./../imgs/menu-card/Cookies-Dough.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cookies Dough
@@ -155,9 +156,9 @@
                 <img src="./../imgs/menu-card/Cream-MilkShake.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Cream MilkShake
@@ -171,8 +172,8 @@
                 <img src="./../imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt=""><img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt=""><button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt=""><img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt=""><button onclick="wishlist()"  id="btnh1" class="btn1"><i class="fa-solid fa-heart my-0"></i></button>
             </div>
             <div class="flavour-description">
                 Creamy Cake
@@ -186,9 +187,9 @@
                 <img src="./../imgs/menu-card/Ice-Cream-Cakes.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Ice Cream Cakes
@@ -202,9 +203,9 @@
                 <img src="./../imgs/menu-card/Lemon-Ice-Cream.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Lemon Ice Cream
@@ -218,9 +219,9 @@
                 <img src="./../imgs/menu-card/Pretzel-Cone.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Pretzel Cone
@@ -234,9 +235,9 @@
                 <img src="./../imgs/menu-card/Toasted-Strawberry.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Toasted Strawberry
@@ -250,9 +251,9 @@
                 <img src="./../imgs/menu-card/Vanilla.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Vanilla
@@ -265,9 +266,9 @@
                 <img src="./../imgs/menu-card/Wafer-Ice-Cream.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Wafer Ice Cream
@@ -281,9 +282,9 @@
                 <img src="./../imgs/menu-card/Waffle-Cones.jpg" class="flavour-img" alt="">
             </div>
             <div class="effect-hover">
-               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                <img src="./../icons/menupage-icons/wishlist.png" height="20px" id="wishlistImg" alt="">
+               <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" id="wishlistImg" alt="">
             </div>
             <div class="flavour-description">
                 Waffle Cones
