--- a/Pages/flavour-page.html
+++ b/Pages/flavour-page.html
@@ -19,9 +19,9 @@
                        <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                        <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                        <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image" >
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Cereal And Milk <br>
@@ -34,9 +34,9 @@
                         <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Choco Cherry
@@ -50,9 +50,9 @@
                         <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                        <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                        <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Chokobar
@@ -66,9 +66,9 @@
                         <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         chocolate Wafer
@@ -83,9 +83,9 @@
                         <img src="./../imgs/menu-card/Cookie.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Cookie
@@ -99,9 +99,9 @@
                         <img src="./../imgs/menu-card/Cookies-Cream.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Cookies Cream
@@ -115,9 +115,9 @@
                         <img src="./../imgs/menu-card/Cookies-Dough.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Cookies Dough
@@ -131,9 +131,9 @@
                         <img src="./../imgs/menu-card/Cream-MilkShake.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Cream MilkShake
@@ -147,9 +147,9 @@
                         <img src="./../imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Creamy Cake
@@ -163,9 +163,9 @@
                         <img src="./../imgs/menu-card/Ice-Cream-Cakes.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Ice Cream Cakes
@@ -179,9 +179,9 @@
                         <img src="./../imgs/menu-card/Lemon-Ice-Cream.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Lemon Ice Cream
@@ -195,9 +195,9 @@
                         <img src="./../imgs/menu-card/Pretzel-Cone.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Pretzel Cone
@@ -211,9 +211,9 @@
                         <img src="./../imgs/menu-card/Toasted-Strawberry.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Toasted Strawberry
@@ -227,9 +227,9 @@
                         <img src="./../imgs/menu-card/Vanilla.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Vanilla
@@ -243,9 +243,9 @@
                         <img src="./../imgs/menu-card/Wafer-Ice-Cream.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Wafer Ice Cream
@@ -259,9 +259,9 @@
                         <img src="./../imgs/menu-card/Waffle-Cones.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-                        <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
+                       <img src="./../icons/menupage-icons/shopping-bag.png" height="20px" class="hover-image">
+                        <img src="./../icons/menupage-icons/search.png" height="20px" class="hover-image" alt="">
+                        <img src="./../icons/menupage-icons/wishlist.png" height="20px" class="hover-image" alt="">
                     </div>
                     <div class="flavour-description">
                         Waffle Cones
