--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -120,17 +120,17 @@
             <div class="footer"><i class="fa-solid fa-house fa-sol"></i>&nbsp;&nbsp;<a href="./../index.html"
                     class="b">Home</a>
             </div>
-            <div class="footer "><i class="fa-solid fa-clock fa-sol"></i>&nbsp;&nbsp;<a href="./events.html"
-                    class="b">Historical Events
+            <div class="footer "><i class="fa-solid fa-gear fa-sol"></i>&nbsp;&nbsp;<a href="./events.html"
+                    class="b">Services
                 </a></div>
-            <div class="footer "><i class="fa-brands fa-fort-awesome fa-brand"></i>&nbsp;&nbsp;<a href="./forts.html"
-                    class="b">Forts</a></div>
-            <div class="footer "><i class="fa-solid fa-book fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./books.html"
-                    class="b">Books</a></div>
+            <div class="footer "><i class="fa-solid fa-list fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./books.html"
+                    class="b">Menu</a></div>
             <div class="footer "><i class="fa-solid fa-cart-shopping fa-sol"></i>&nbsp;&nbsp;<a href="./store.html"
                     class="b">Store</a></div>
-            <div class="footer "><i class="fa-solid fa-image fa-sol"></i>&nbsp;&nbsp;<a href="./gallery.html"
-                    class="b">Gallery</a></div>
+            <div class="footer "><i class="fa-solid fa-file-pen fa-sol"></i>&nbsp;&nbsp;<a href="./forts.html"
+                    class="b">Registration</a></div>
+            <div class="footer "><i class="fa-solid fa-thumbs-up fa-sol"></i>&nbsp;&nbsp;<a href="./gallery.html"
+                    class="b">Review</a></div>
             <div class="footer "><i class="fa-solid fa-user fa-sol"></i>&nbsp;&nbsp;<a href="./aboutus.html"
                     class="b">About
                     Us</a></div>
@@ -141,37 +141,38 @@
 
         <div class="contact1">Contact Us
             <hr>
-            <div class="footer"><i class="fa-solid fa-phone-volume fa-sol"></i>&nbsp;&nbsp;<a href="tel:8805803087"
-                    class="b">+91 8805803087</a></div>
+            <div class="footer"><i class="fa-solid fa-phone-volume fa-sol"></i>&nbsp;&nbsp;<a href="tel:7744049590"
+                    class="b">+91 7744049590</a></div>
             <div class="footer "><i class="fa-solid fa-envelope fa-sol"></i>&nbsp;&nbsp;<a
-                    href="mailto: suraj@roadtocode.org" class="b"> suraj@roadtocode.org</a></div>
+                    href="mailto: bhushanpotdar3@gmail.com" class="b"> bhushanpotdar3@gmail.com</a></div>
 
-            <div class="footer ">&nbsp;&nbsp;<a href="https://www.instagram.com/roadtocode4u" class="b"
+            <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19" class="b"
                     target="_blank"><i class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
-                    href="https://www.linkedin.com/company/roadtocode4u/" class="a" target="_blank"><i
-                        class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/8805803087"
+                    href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" class="a" target="_blank"><i
+                        class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590"
                     class="b" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
-                &emsp;<a href="https://github.com/roadtocode4u" class="b" target="_blank"><i
-                        class="fa-brands fa-github"></i></a></div>
+                &emsp;<a href="https://github.com/bhushanpotdar19" class="b" target="_blank"><i
+                        class="fa-brands fa-github fa-brand"></i></a></div>
             <br>
 
         </div>
         <div class="location">Location
             <hr>
             <div class="footer"><i class="fa-solid fa-location-dot fa-sol"></i></i>&nbsp;&nbsp;<a
-                    href="https://maps.app.goo.gl/Rmh5xuF63HXWgcGK7" class="b">404, Laxmi Heights, Above Lotus
-                    Multi<br>speciality Hospital Manjari BK, pune - 412307
+                    href="https://maps.app.goo.gl/TCA1th79iKR1wiRE9" class="b">107,
+                    Deur BK, Tal-Dhule, <br>Dist-Dhule -424302
                 </a></div>
             <div class="footer "><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1116.529728101981!2d73.9694876332356!3d18.49654137850211!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e1!3m2!1sen!2sin!4v1706899658473!5m2!1sen!2sin"
-                    width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d777.7157158970201!2d74.4609393!3d20.9038021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdeef04875b6c27%3A0xb9b55ff007fa15d1!2sWF36%2BGHV%2C%20Deur%20Budruk%2C%20Maharashtra%20424302!5e1!3m2!1sen!2sin!4v1712915607325!5m2!1sen!2sin"
+                    width="280" height="170" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+            </div>
 
         </div>
-            
+
     </footer>
-    <center style="background-color: rgb(29, 28, 28); margin-bottom:10px; padding:0%; color:white ">Copyright &copy 2024 All
+    <center style="background-color: rgb(29, 28, 28); margin-bottom:10px; padding:0%; color:white ">Copyright &copy 2024
+        All
         Rights Reserved by RTC.</center>
 
 
