media query apply to the imgs

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -29,7 +29,7 @@
      <div class="ice-des d-inline-block text-start fs-5 mt-4  col col-lg-2 col-md-1 col-sm-1"> 
         <h1 id="name">Cereal And Milk</h1> 
         <h3 id="price">only at ₹160/-</h3>
-        <p class="id ">
+        <p class="id mx-5">
              <span id="minus" onclick="dec()"><i class="fa-solid fa-circle-minus outline-hidden fs-2 mt-auto" style="background-color:white;color:#e83e8c"></i></span>
 
             <span class="one" id="one">1 </span>
@@ -37,11 +37,11 @@
 
         </p>
         <p id="order">You Order:<p>
-            <p id="total"></p>
-        <p class="my-4">
-            It's a sweet, creamy, and rich dessert that can be enjoyed any time.Simple pleasures: ice cream and sunshine.
+            <p id="total">Total amount</p>
+        <!--<p class="my-4">
+            It's a sweet, creamy, and rich dessert that can be enjoyed any time.<br>Simple pleasures: <br>ice cream and sunshine.
       
-        </p>
+        </p>-->
         <section class="flavour-card mx-4" >
             <p class="effect-hover">
                 <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
