--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -120,20 +120,19 @@
             <div class="footer"><i class="fa-solid fa-house fa-sol"></i>&nbsp;&nbsp;<a href="./../index.html"
                     class="b">Home</a>
             </div>
-            <div class="footer "><i class="fa-solid fa-gear fa-sol"></i>&nbsp;&nbsp;<a href="./events.html"
+            <div class="footer "><i class="fa-solid fa-gear fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/services.html"
                     class="b">Services
                 </a></div>
-            <div class="footer "><i class="fa-solid fa-list fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./books.html"
+            <div class="footer "><i class="fa-solid fa-list fa-sol"></i>&nbsp;&nbsp;&nbsp;<a href="./../Pages/menu-page.html"
                     class="b">Menu</a></div>
-            <div class="footer "><i class="fa-solid fa-cart-shopping fa-sol"></i>&nbsp;&nbsp;<a href="./store.html"
+            <div class="footer "><i class="fa-solid fa-cart-shopping fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/product-card.html"
                     class="b">Store</a></div>
-            <div class="footer "><i class="fa-solid fa-file-pen fa-sol"></i>&nbsp;&nbsp;<a href="./forts.html"
+            <div class="footer "><i class="fa-solid fa-file-pen fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/registration.html"
                     class="b">Registration</a></div>
-            <div class="footer "><i class="fa-solid fa-thumbs-up fa-sol"></i>&nbsp;&nbsp;<a href="./gallery.html"
+            <div class="footer "><i class="fa-solid fa-thumbs-up fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/review-page.html"
                     class="b">Review</a></div>
-            <div class="footer "><i class="fa-solid fa-user fa-sol"></i>&nbsp;&nbsp;<a href="./aboutus.html"
-                    class="b">About
-                    Us</a></div>
+            <div class="footer "><i class="fa-solid fa-user fa-sol"></i>&nbsp;&nbsp;<a href="./../Pages/about-us.html"
+                    class="b">About Us</a></div>
 
 
         </div>
@@ -171,7 +170,7 @@
         </div>
 
     </footer>
-    <center style="background-color: rgb(32, 31, 31); margin-bottom:10px; padding:0%; color:white ">Copyright &copy 2024
+    <center style="background-color: rgb(32, 31, 31); margin-bottom:0%; padding:0%; color:white ">Copyright &copy 2024
         All
         Rights Reserved by RTC.</center>
 
