contact page done

--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -161,7 +161,7 @@
                     href="https://maps.app.goo.gl/TCA1th79iKR1wiRE9" class="b">107,
                     Deur BK, Tal-Dhule, <br>Dist-Dhule -424302
                 </a></div>
-            <div class="footer "><iframe
+            <div class="footer "><iframe class="mapl"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d777.7157158970201!2d74.4609393!3d20.9038021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdeef04875b6c27%3A0xb9b55ff007fa15d1!2sWF36%2BGHV%2C%20Deur%20Budruk%2C%20Maharashtra%20424302!5e1!3m2!1sen!2sin!4v1712915607325!5m2!1sen!2sin"
                     width="280" height="170" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
