--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -71,6 +71,30 @@ We Are An Awesome Agency.
          <p class="pragraph-text lh-lg fs-6 my-5"> Explore our menu and discover a world of flavor possibilities Just for you. From our signature sundaes to customizable ice cream sandwiches, there's no limit to the delicious combinations you can create. </p>
     </div>
 </div>
+
+<div class="gradient mt-5">
+  <div class="text-center p-4" > <h1 class="heading-font">  Our Features</h1></div> 
+  <div class="d-flex"> <hr/>
+
+      <div class="d-flex m-4 pragraph-text" > <img src="/img/cream.png" class="icon"/>
+     <p class="fs-4"> High Quality Creams</p> </div>
+
+   <div class="d-flex m-4  pragraph-text"> <img src="/img/high-quality.png" class="icon"/>
+     <p class="fs-4 ">Rich Flavours</p> </div>
+
+   <div class="d-flex m-4  pragraph-text"> <img src="/img/vegan.png"  class="icon">
+     <p class="fs-4 "> Vegan</p> </div>
+ </div>
+ <div class="d-flex" style="margin-left: 15%;">
+  <div class="d-flex m-4  pragraph-text" > <img src="/img/fresh.png" class="icon"/>  
+    <p class="fs-4 p-3"> Natural and Fresh Ingredients </p></div>
+
+    <div class="d-flex m-4  pragraph-text " > <img src="/img/ice-cream.png" class="icon"/>  
+    <p class="fs-4 p-3">Balanced Sweetness</p>
+    </div>
+ </div>
+
+
         
    <div>
             <div class="text-center m-5 p-2"> <h1 class="fs-1 fw-bolder heading-font ">
