mq apply to the imgs

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -24,7 +24,7 @@
         Enjoy our flavoursome <br/>range<br/> of gorgeous ice cream
     </p>  
     <div class="d-flex justify-content-center row">
-        <div class="col col-lg-2 col-md-1 col-sm-1 mt-5"><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
+        <div class="col col-lg-2 col-md-1 col-sm-1 mt-5 chocolate"><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
        
      <div class="ice-des d-inline-block text-start fs-5 mt-4  col col-lg-2 col-md-1 col-sm-1"> 
         <h1 id="name">Cereal And Milk</h1> 
@@ -127,7 +127,7 @@
      </div></div>
      <!--Cards are started-->
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-    <h1 class="fs-1 text-center my-5">More about our products</h1>
+    <h1 class="fs-1 text-center my-5 more">More about our products</h1>
      
 <!-- Card making-->
 
@@ -204,7 +204,7 @@ No products are available.
 </div>
 </div>
 <!--product section starts-->
-<h1 class="fs-1 text-center my-5">More Variety</h1>
+<h1 class="fs-1 text-center my-5">More Varieties</h1>
 <div class=" row d-flex justify-content-center m-5">
 <div class="products col col-lg-3 col-md-2 col-sm-1  my-1">
     <img src="./../imgs/product-card/Ice-pink.png" class="col icecones"  onclick="changeimage('Ice Cone')" alt="choco4" id="colors"/>
