--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -76,20 +76,20 @@ We Are An Awesome Agency.
   <div class="text-center p-4" > <h1 class="heading-font">  Our Features</h1></div> 
   <div class="d-flex"> <hr/>
 
-      <div class="d-flex m-4 pragraph-text" > <img src="/img/cream.png" class="icon"/>
+      <div class="d-flex m-4 pragraph-text" > <img src="./../icons/about-us/img/cream.png" class="icon"/>
      <p class="fs-4"> High Quality Creams</p> </div>
 
-   <div class="d-flex m-4  pragraph-text"> <img src="/img/high-quality.png" class="icon"/>
+   <div class="d-flex m-4  pragraph-text"> <img src="./../icons/about-us/img/high-quality.png" class="icon"/>
      <p class="fs-4 ">Rich Flavours</p> </div>
 
-   <div class="d-flex m-4  pragraph-text"> <img src="/img/vegan.png"  class="icon">
+   <div class="d-flex m-4  pragraph-text"> <img src="./../icons/about-us/img/vegan.png"  class="icon">
      <p class="fs-4 "> Vegan</p> </div>
  </div>
  <div class="d-flex" style="margin-left: 15%;">
-  <div class="d-flex m-4  pragraph-text" > <img src="/img/fresh.png" class="icon"/>  
+  <div class="d-flex m-4  pragraph-text" > <img src="./../icons/about-us/img/fresh.png" class="icon"/>  
     <p class="fs-4 p-3"> Natural and Fresh Ingredients </p></div>
 
-    <div class="d-flex m-4  pragraph-text " > <img src="/img/ice-cream.png" class="icon"/>  
+    <div class="d-flex m-4  pragraph-text " > <img src="./../icons/about-us/img/ice-cream.png" class="icon"/>  
     <p class="fs-4 p-3">Balanced Sweetness</p>
     </div>
  </div>
