--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -72,7 +72,8 @@ We Are An Awesome Agency.
     </div>
 </div>
 
-<div class="gradient mt-5">
+<div style="margin-top: 150px;">
+ <div class="gradient mt-5" >
   <div class="text-center p-4" > <h1 class="heading-font">  Our Features</h1></div> 
   <div class="d-flex"> <hr/>
 
@@ -93,7 +94,7 @@ We Are An Awesome Agency.
     <p class="fs-4 p-3">Balanced Sweetness</p>
     </div>
  </div>
-
+</div>
 
         
    <div>
