--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
     <script src="./JS/header.js"></script>
+    <script src="./JS/index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -128,23 +130,23 @@
     <div class="Seller-container">
         <span class="headings ">Our Best Seller</span>
         <div class="flex seller-heading">
-            <h4 onclick="newArrival()">NEW ARRIVALS</h4>
-            <h4 onclick="bestSeller()">BEST SELLER</h4>
-            <h4 onclick="topRates()">TOP RATES</h4>
+            <h4 onclick="newArrival()" id="newArrival">NEW ARRIVALS</h4>
+            <h4 onclick="bestSeller()" id="bestSeller">BEST SELLER</h4>
+            <h4 onclick="topRates()" id="topRates">TOP RATES</h4>
 
         </div>
         <div class="flavour-container">
             <div class="row  ">
                 <div class=" flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img img-fluid" id="productImage1" alt="" />
+                        <img src="./imgs/home/1.jpg" class="flavour-img img-fluid" id="productImage1" alt="" />
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search" alt="">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="white-list">
                     </div>
-                    <div class="flavour-description">
+                    <div id="productText1" class="flavour-description">
                         Cereal And Milk <br>
                         <p class="flavour-price">₹ 200.00 </p>
                     </div>
@@ -152,14 +154,14 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Choco-Cherry.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/2.jpg" class="flavour-img img-fluid" id="productImage2" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="white-list">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText2" class="flavour-description">
                         Choco Cherry
                         <br>
                         <p class="flavour-price">₹ 360.00 </p>
@@ -168,14 +170,14 @@
 
                 <div class=" flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Chokobar.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/3.jpg" class="flavour-img img-fluid" id="productImage3" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText3" class="flavour-description">
                         Chokobar
                         <br>
                         <p class="flavour-price">₹ 150.00 </p>
@@ -184,14 +186,14 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/4.jpg" class="flavour-img img-fluid" id="productImage4" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText4" class="flavour-description">
                         chocolate Wafer
                         <br>
                         <p class="flavour-price">₹ 320.00 </p>
@@ -201,14 +203,14 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Cookie.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/5.jpg" class="flavour-img img-fluid" id="productImage5" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText5" class="flavour-description">
                         Cookie
                         <br>
                         <p class="flavour-price">₹ 480.00 </p>
@@ -217,14 +219,14 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Cookies-Cream.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/6.jpg" class="flavour-img img-fluid" id="productImage6" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText6" class="flavour-description">
                         Cookies Cream
                         <br>
                         <p class="flavour-price">₹ 260.00 </p>
@@ -233,14 +235,14 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Cookies-Dough.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/7.jpg" class="flavour-img img-fluid" id="productImage7" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText7" class="flavour-description">
                         Cookies Dough
                         <br>
                         <p class="flavour-price">₹ 260.00 </p>
@@ -249,17 +251,17 @@
 
                 <div class="flavour-card col col-md-2 col-lg-3">
                     <div>
-                        <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img img-fluid" id="productImage1" alt="">
+                        <img src="./imgs/home/8.jpg" class="flavour-img img-fluid" id="productImage8" alt="">
                     </div>
                     <div class="effect-hover">
                         <img src="./icons/shopping-bag.png" class="hover-image" title="add to cart">
                         <img src="./icons/magnifying-glass.png" class="hover-image" title="search ">
                         <img src="./icons/heart.png" class="hover-image" title="wishlist">
                     </div>
-                    <div class="flavour-description">
+                    <div  id="productText8" class="flavour-description">
                         Creamy Cake
                         <br>
-                        <p class="flavour-price">₹ 260.00 </p>
+                        <p id="price" class="flavour-price">₹ 260.00 </p>
                     </div>
                 </div>
 
@@ -453,35 +455,42 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active flex">
-                <img src="./imgs/home/instagram1.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram2.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram3.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram4.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram5.webp" class="w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram6.webp" class=" w-10 img-fluid"  height="275px"alt="...">
+                <img src="./imgs/home/instagram1.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram2.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram3.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram4.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram5.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram6.webp" class=" w-10 "  height="275px"alt="...">
               </div>
               <div class="carousel-item flex">
-                <img src="./imgs/home/instagram2.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram3.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram4.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram5.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram6.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram1.webp" class=" w-10 img-fluid"  height="275px"alt="...">
+                <img src="./imgs/home/instagram2.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram3.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram4.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram5.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram6.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram1.webp" class=" w-10 "  height="275px"alt="...">
               </div>
               <div class="carousel-item flex">
-                <img src="./imgs/home/instagram3.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram4.webp" class=" w-10 img-fluid"  height="275px" alt="...">
-                <img src="./imgs/home/instagram5.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram6.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram1.webp" class=" w-10 img-fluid" height="275px" alt="...">
-                <img src="./imgs/home/instagram2.webp" class=" w-10 img-fluid"  height="275px"alt="...">
+                <img src="./imgs/home/instagram3.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram4.webp" class=" w-10 "  height="275px" alt="...">
+                <img src="./imgs/home/instagram5.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram6.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram1.webp" class=" w-10 " height="275px" alt="...">
+                <img src="./imgs/home/instagram2.webp" class=" w-10 "  height="275px"alt="...">
               </div>
             </div>
           </div>
         <div class="row">
             <div class="col col-md-2 col-lg-3">
-                <div>
-                    <img src="./imgs/home/instagram1.webp" height="100px" class="img-fluid" alt="">
+                <div class="container1">
+                    <img src="./imgs/home/instagram1.webp" height="100px" class=" image" alt="">
+                    
+                    <!-- <div class="overlay">
+                        <a href="#" class="icon" title="User Profile">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                      </div> -->
+
                 </div>
                 <div>
                     <img src="./imgs/home/instagram2.webp" height="100px" class="img-fluid" alt="">
